# WeChat_Official_Account_Golden_Content_Discovery_System

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  Dockerfile  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md  pull_request_template.zh-CN.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.zh-CN.md  feature_request.md  feature_request.zh-CN.md
.github/workflows/: ci.yml  release.yml
docs/: INSTALL.md  PLUGIN_GUIDE.md  README.zh-CN.md
docs/en/: AUTO_INGESTION_RUNBOOK.md  DEVELOPER_GUIDE.md  INSTALL.md  KEYWORD_AUTO_INGESTION_RUNBOOK.md  LOCAL_PROXY_ADAPTER.md  PHONE_DIAGNOSTICS_RUNBOOK.md  PLUGIN_GUIDE.md  PRODUCTION_RUNBOOK.md  PRODUCTION_SUITE_RUNBOOK.md  QUICK_START_ONE_CLICK.md  QUICK_START_P0_P1_P2.md  USER_GUIDE.md  WECHAT_INGESTION_OPTIONS_ABC.md
docs/zh-CN/: 使用说明.md  关键词自动采集运行手册.md  安全说明.md  安装部署.md  开发文档.md  微信数据接入方案ABC.md  快速开始P0P1P2说明.md  快速开始一键操作.md  手机接入诊断运行手册.md  插件开发.md  更新日志.md  本地代理适配器方案A.md  生产中心运行手册.md  生产运行手册.md  自动采集运行手册.md  行为准则.md  贡献指南.md
include/: AdbAutomationEngine.h  AdbTool.h  AppSettings.h  AutoIngestionController.h  AutoIngestionWidget.h  BridgePayloadClient.h  ControlPanelWidget.h  DashboardWidget.h  DataViewerWidget.h  DatabaseController.h  ExportController.h  IContentProvider.h  KeywordDiscoveryController.h  KeywordDiscoveryWidget.h  MainWindow.h  ManualWidget.h  PhoneDiagnosticsController.h  PhoneDiagnosticsWidget.h  PluginManager.h  PremiumContentFilterProxyModel.h  ProductionSuiteController.h  ProductionSuiteWidget.h  ProxyTrafficBridge.h  QuickStartWidget.h  RuntimeLogWidget.h  SeedManagerWidget.h  UiText.h  WeChatConfigWidget.h  WeChatProviderPlugin.h  WeChatSearchAutomationController.h  content_record.h
plugins/: README.md  README.zh-CN.md
scripts/: audit_chinese_ui_i18n.py  audit_language_split.py  audit_no_forbidden_tokens.py  audit_requirements.py  package-linux.sh  package-windows.ps1  verify-all.sh
src/: AdbAutomationEngine.cpp  AdbTool.cpp  AppSettings.cpp  AutoIngestionController.cpp  AutoIngestionWidget.cpp  BridgePayloadClient.cpp  ControlPanelWidget.cpp  DashboardWidget.cpp  DataViewerWidget.cpp  DatabaseController.cpp  ExportController.cpp  KeywordDiscoveryController.cpp  KeywordDiscoveryWidget.cpp  MainWindow.cpp  ManualWidget.cpp  PhoneDiagnosticsController.cpp  PhoneDiagnosticsWidget.cpp  PluginManager.cpp  PremiumContentFilterProxyModel.cpp  ProductionSuiteController.cpp  ProductionSuiteWidget.cpp  ProxyTrafficBridge.cpp  QuickStartWidget.cpp  RuntimeLogWidget.cpp  SeedManagerWidget.cpp  UiText.cpp  WeChatConfigWidget.cpp  WeChatProviderPlugin.cpp  WeChatSearchAutomationController.cpp  main.cpp
tests/: test_core.cpp
ui/: control_panel_widget.ui  dashboard_widget.ui  data_viewer_widget.ui  mainwindow.ui  wechat_config_widget.ui
